# Snake-Game

./: README.md
PJ/: Snake.cpp  color.html
PJ/PJ_Snack/: CMakeLists.txt
PJ/Snack_pro/: CMakeLists.txt
PJ/final/: OOP大作业—贪吃蛇游戏.md  Snake 修改大纲.md  模式.md
PJ/sfml/: CMakeLists_sfml.txt
